--- a/src/components/CommonSettings/CommonSettings.module.scss
+++ b/src/components/CommonSettings/CommonSettings.module.scss
@@ -3,14 +3,50 @@
     right: 0;
     bottom: 0;
     z-index: 2000;
-    width: 30px;
+    width: auto;
+    min-width: 30px;
     height: auto;
-    padding: 5px;
+    padding: 8px;
     background-color: white;
     border-top-left-radius: 5px;
     border: solid 1px #eeeeee;
+    display: flex;
+    align-items: center;
+    flex-flow: row nowrap;
+
+    & > * {
+        margin-right: 20px;
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+
 }
 
-.settingsIcon {
+.icon {
     cursor: pointer;
+    font-size: 25px;
+}
+
+.card {
+    margin-bottom: 5px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.controls {
+    display: flex;
+    align-items: center;
+    flex-flow: row nowrap;
+
+    & > * {
+        margin-right: 10px;
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
 }
