--- a/src/components/CommonSettings/CommonSettings.module.scss
+++ b/src/components/CommonSettings/CommonSettings.module.scss
@@ -30,10 +30,15 @@
 }
 
 .card {
+    cursor: pointer;
     margin-bottom: 5px;
 
     &:last-child {
         margin-bottom: 0;
+    }
+
+    &:hover {
+        box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
     }
 }
 
