первая загрузка, адаптивная ширина и высота

--- a/src/components/Chart/Chart.module.scss
+++ b/src/components/Chart/Chart.module.scss
@@ -3,6 +3,7 @@
     margin: 5px;
     border: solid 1px #d4d4d4;
     position: relative;
+    overflow: hidden;
     box-shadow: 0 5px 8px 0 rgba(34, 60, 80, 0.2);
 }
 
