--- a/src/components/Chart/Chart.module.scss
+++ b/src/components/Chart/Chart.module.scss
@@ -34,6 +34,31 @@
     }
 }
 
+.intervals {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    cursor: pointer;
+
+    & > * {
+        margin-right: 3px;
+        color: #aeb2b6;
+        font-size: 80%;
+
+        &:hover {
+            color: #1f2331;
+        }
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+}
+
+.currentInterval {
+    color: #1f2331;
+}
+
 .title {
     font-size: 100%;
 }
